# neural-dive

./: .gitignore  .pre-commit-config.yaml  .prek.yaml  CLAUDE.md  CLEANUP.md  CONTENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  Makefile  QUESTION_GUIDE.md  README.md  REFACTORING_OPPORTUNITIES.md  REFACTORING_PLAN.md  ndive  pyproject.toml  test_neural_dive.sh  validate_questions.py
docs/: content-guide.md  known-issues.md  question-guide.md
neural_dive/: __init__.py  __main__.py  answer_matching.py  config.py  conversation.py  data_loader.py  difficulty.py  entities.py  entity_renderers.py  enums.py  events.py  game.py  game_builder.py  game_serializer.py  input_handler.py  items.py  map_generation.py  menu.py  models.py  placement.py  question_renderers.py  question_types.py  rendering.py  rendering.py.bak  themes.py
neural_dive/backends/: __init__.py  backend.py  blessed_backend.py  test_backend.py
neural_dive/data/: content_registry.json  levels.py  npcs.json  questions.json  snippets.json  terminals.json
neural_dive/data/content/algorithms/: content.json  levels.py  npcs.json  questions.json
neural_dive/data/content/chinese-hsk6/: content.json  levels.py  npcs.json  questions.json  terminals.json
neural_dive/data/content/geography/: content.json  levels.py  npcs.json  questions.json  terminals.json
neural_dive/managers/: __init__.py  answer_processor.py  conversation_engine.py  floor_entity_generator.py  floor_manager.py  interaction_handler.py  movement_controller.py  npc_manager.py  player_manager.py  quest_manager.py  state_manager.py  stats_tracker.py
neural_dive/tests/: __init__.py  test_blessed_backend.py  test_conversation.py  test_conversation_engine.py  test_data_loader.py  test_events.py  test_floor_entity_generator.py  test_floor_manager.py  test_game_builder.py  test_game_commands.py  test_game_core.py  test_game_initialization.py  test_input_handler.py  test_interaction_handler.py  test_map_generation.py  test_models.py  test_movement_controller.py  test_npc_manager.py  test_player_manager.py  test_quest_manager.py  test_rendering.py  test_rendering_backend.py  test_state_manager.py  test_stats_tracker.py  test_test_backend.py
scripts/: README.md  generate_questions.py  redistribute_questions.py
