[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-dive"
version = "0.1.0"
description = "A cyberpunk terminal roguelike game with computer science educational content"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["game", "roguelike", "terminal", "education", "computer-science", "cyberpunk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Games/Entertainment :: Role-Playing",
]

dependencies = [
    "blessed>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "prek>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
]

[project.scripts]
neural-dive = "neural_dive.__main__:main"

[project.urls]
Homepage = "https://github.com/qyearsley/neural-dive"
Repository = "https://github.com/qyearsley/neural-dive"
Issues = "https://github.com/qyearsley/neural-dive/issues"

# ============================================================================
# Hatchling Configuration
# ============================================================================
[tool.hatch.build.targets.wheel]
packages = ["neural_dive"]

[tool.hatch.build.targets.sdist]
include = [
    "/neural_dive",
    "/README.md",
    "/LICENSE",
]

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

# Exclude common directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and other useful rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__ files

[tool.ruff.lint.isort]
known-first-party = ["neural_dive"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["neural_dive/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["neural_dive"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, gradually enable
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
warn_unreachable = true

# Per-module options - gradually increase strictness
[[tool.mypy.overrides]]
module = "neural_dive.models"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "neural_dive.entities"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "neural_dive.conversation"
disallow_untyped_defs = true

# Ignore missing imports for external libraries
[[tool.mypy.overrides]]
module = "blessed.*"
ignore_missing_imports = true
